[FLINK-35366] Create all database modules